2021-02-21  Jay Berkenbilt  <ejb@ql.org>

	* Add QPDFObjectHandle::copyStream() for making a copy of a stream
	within the same QPDF instance.

	* Allow QPDFObjectHandle::newArray and
	QPDFObjectHandle::newFromMatrix take QPDFMatrix as well as
	QPDFObjectHandle::Matrix

	* Make member variables a--f of QPDFMatrix public

2021-02-20  Jay Berkenbilt  <ejb@ql.org>

	* Allow --rotate=0 to clear rotation from a page.

2021-02-18  Jay Berkenbilt  <ejb@ql.org>

	* Add QPDFAcroFormDocumentHelper::addFormField, which adds a new
	form field, initializing the AcroForm dictionary if needed.

	* Add QPDFPageObjectHelper::getMatrixForFormXObjectPlacement,
	which returns the transformation matrix required to map from a
	form field's coordinate system into a specific rectangle within
	the page.

	* Add QUtil::path_basename to get last element of a path.

	* Add examples/pdf-attach-file.cc to illustrate new file
	attachment method and also new parse that takes indirect objects.

2021-02-17  Jay Berkenbilt  <ejb@ql.org>

	* Allow optional numeric argument to --collate. If --collate=n is
	given, pull n pages from the first file, n pages from the second
	file, etc., until we run out of pages.

2021-02-15  Jay Berkenbilt  <ejb@ql.org>

	* Add a version of QPDFObjectHandle::parse that takes a QPDF* as
	context so that it can parse strings containing indirect object
	references.

2021-02-14  Jay Berkenbilt  <ejb@ql.org>

	* Add new versions of QPDFObjectHandle::replaceStreamData that
	take std::function objects for cases when you need something
	between a static string and a full-fledged StreamDataProvider.
	Using this with QUtil::file_provider is a very easy way to create
	a stream from the contents of a file.

2021-02-12  Jay Berkenbilt  <ejb@ql.org>

	* Move formerly internal QPDFMatrix class to the public API. This
	class provides convenience methods for working with transformation
	matrices.

	* QUtil::double_to_string: trim trailing zeroes by default, and